k8s/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: vk-paints
spec:
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 3002
