k8s/product-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product-service-route
  namespace: vk-paints
spec:
  parentRefs:
  - name: vk-paints-gateway
    namespace: vk-paints
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /products
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: product-service
      port: 80
